--- a/British Food.html
+++ b/British Food.html
@@ -4,53 +4,67 @@
 <head>
     <title>Introduction to British Food</title>
     <link rel="stylesheet" href="BritishFood style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <header>
-        <img src="logo.png" alt="Logo" title="DELICACY">
-        <p></p>
-    </header>
-
-    <nav>
+    <div class="tou">
+        <img src="logo.png" alt="logo" title="DELICACY">
         <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Menu.html">Menu</a></li>
-            <li><a href="signup.html">Signup</a></li>
+            <li><a href="Home.html ">Home</a></li>
+            <li><a href="Menu.html ">Menu</a></li>
+            <li><a href="Signup.html ">Signup</a></li>
         </ul>
-    </nav>
+    </div>
+
     <div class="container">
         <h1 class="title">Introduction to British Food</h1>
         <div class="content">
             <p>British specialties include the traditional English breakfast, which consists of fried eggs, bacon, sausage and so on. In addition, the British fish and chips is also very famous, the fish is tender, the chips are fried golden crisp. In addition,
                 Britain also has traditional meat pies and tea.</p>
         </div>
+
+
         <div class="divider"></div>
         <h2 class="recommendation">British restaurants recommended in Manchester</h2>
+        <span id="The lvy"></span>
         <div class="restaurant">
             <img src="The lvy.png" alt="The lvy" title="The lvy">
-            <h3>The lvy</h3>
+            <h2>The lvy</h2>
             <p>Located in the Spinningfields area of Manchester city centre. </p>
             <div>
                 <p>Address: The Pavilion, Byrom St, Manchester M3 3HG.</p>
             </div>
         </div>
+        <span id="Hawksmoor"></span>
         <div class="restaurant">
             <img src="Hawksmoor.png" alt="Hawksmoor" title="Hawksmoor">
-            <h3>Hawksmoor</h3>
+            <h2>Hawksmoor</h2>
             <p>A restaurant famous for steak and seafood. </p>
             <div>
                 <p>Address: 184-186 Deansgate, Manchester M3 3WB.</p>
             </div>
         </div>
+        <span id="Adam Reid at The French"></span>
         <div class="restaurant">
             <img src="Adam Reid at The French.png" alt="Adam Reid at The French" title="Adam Reid at The French">
-            <h3>Adam Reid at The French</h3>
+            <h2>Adam Reid at The French</h2>
             <p>A Michelin-starred restaurant serving creative British cuisine.</p>
             <div>
                 <p>Address: The Midland Hotel, Peter St, Manchester M60 2DS.</p>
             </div>
         </div>
+    </div>
+    <div class="contact">
+        <div class="con">
+            <h3>Contact Us</h3>
+            <h4>contactus@delicacy.com<br> 07536 345734</h4>
+        </div>
+        <div class="con">
+            <h3>Visit Us</h3>
+            <h4>Brian Statham Way,<br>Old Trafford,<br>Stretford,<br>Manchester<br>M16 0PU</h4>
+        </div>
+        <img src="media.png">
     </div>
 </body>
 
