--- a/Home.html
+++ b/Home.html
@@ -5,31 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delicacy</title>
-    <link rel="short icon" href="logo.ico">
-    <link rel="stylesheet" href="Home styles.css">
-
+    <link rel="stylesheet" href="Home style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <header>
-        <img src="logo.png" alt="Logo" title="DELICACY">
-        <p></p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Menu.html">Menu</a></li>
-            <li><a href="signup.html">Signup</a></li>
-        </ul>
-    </nav>
-    <section id="about">
-        <h2>About us</h2>
-        <p></p>
-    </section>
+    <div class="box">
+        <div class="tou">
+            <img src="logo.png" alt="logo" title="DELICACY">
+            <ul>
+                <li><a href="Home.html ">Home</a></li>
+                <li><a href="Menu.html ">Menu</a></li>
+                <li><a href="Signup.html ">Signup</a></li>
+            </ul>
+        </div>
+        <div class="nr11">
+            <div class="nr ">
+                <h4>hi,my name is</h4>
+                <h1>Enjun Xu. <br>I made this website.</h1><br>
+                <p>
+                    I made this website about different types of food recommendations in Manchester.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <footer>
+            <p>&copy;2023 Delicacy</p>
+        </footer>
+    </div>
 
-    <footer>
-        <p>&copy;2023 Delicacy</p>
-    </footer>
+
 </body>
 
 </html>
