--- a/Menu.html
+++ b/Menu.html
@@ -5,51 +5,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delicacy</title>
-    <link rel="stylesheet" href="Menu styles.css">
+    <link rel="stylesheet" href="Menu style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+       window.onload=function () {
+           //获取inputDom
+           let inputChange1 = document.getElementById("search_input")
+           //监听输入事件
+           inputChange1.oninput = function(){
+               //获取输入的值
+               let value = document.getElementById("search_input").value
+              if(value=='The lvy'||value=='Adam Reid at The French'||value=='Hawksmoor'){
+                  //使用的是条链接加描点发跳到目标位置
+                  location.href="British Food.html#"+value;
+              }
+           }
+           document.getElementById("search_input").addEventListener("onporpertychange",function(e){
+               console.log("inputting!!");
+           })
+       }
+    </script>
 </head>
 
+
 <body>
-    <header>
-        <img src="logo.png" alt="Logo" title="DELICACY">
-    </header>
-
-    <nav>
+    <div class="tou">
+        <img src="logo.png" alt="logo" title="DELICACY">
         <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Menu.html">Menu</a></li>
-            <li><a href="signup.html">Signup</a></li>
+            <li><a href="Home.html ">Home</a></li>
+            <li><a href="Menu.html ">Menu</a></li>
+            <li><a href="Signup.html ">Signup</a></li>
         </ul>
-    </nav>
-
+    </div>
+    <div class="search">
+        <input id="search_input"/>
+    </div>
+    </br>
+    <div class="region">
+        <h2>Cuisine by region</h2>
+    </div>
+    </br>
     <div class="container">
         <div class="category">
             <a href="British Food.html"><img src="British Food.png" alt="British Food" title="British Food"></a>
             <h2>British Food</h2>
         </div>
 
-
-
         <div class="category">
             <img src="Chinese Food.png" alt="Chinese Food" title="Chinese Food">
             <h2>Chinese Food</h2>
         </div>
-
-
 
         <div class="category">
             <img src="Indian Food.png" alt="Indian Food" title="Indian Food">
             <h2>Indian Food</h2>
         </div>
 
-
-
         <div class="category">
             <img src="Pakistani Food.png" alt="Pakistani Food" title="Pakistani Food">
             <h2>Pakistani food</h2>
         </div>
     </div>
-
-
 
 </body>
 
